--- a/fluid-images/phone-book/index.html
+++ b/fluid-images/phone-book/index.html
@@ -17,8 +17,8 @@
 		<img  class="card__avatar" src="https://netology-code.github.io/mq-homeworks/fluid-images/phone-book/img/unkle-stan.jpeg" alt="Фотография Михаила Иванова">
 		<div class="card__content">
 			<h3 class="card__name">Михаил Иванов</h3>
-			<div class="card__contact">+61 1900 654 321</div>
-			<div class="card__contact">uncleAcidicStan@gmail.com</div>
+			<a href="tel:611900654321" class="card__contact">+61 1900 654 321</a>
+			<a href="mailto:uncleAcidicStan@gmail.com&subject=Люблю Гравити Фолз!" class="card__contact">uncleAcidicStan@gmail.com</a>
 		</div>
 	</div>
 	<div class="card">
