--- a/media-types/print-poster/index.html
+++ b/media-types/print-poster/index.html
@@ -7,7 +7,7 @@
     <title>MQ-2.1. Задача 3 — Плакат</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oranienbaum&subset=cyrillic-ext">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/print-poster.css">
+    <link rel="stylesheet" href="./css/print-poster.css" media="print">
     <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
 
 </head>
