--- a/adaptive-images/course-list/index.html
+++ b/adaptive-images/course-list/index.html
@@ -13,6 +13,8 @@
 <div class="courses">
     <article class="course">
       <picture class="course__preview">
+        <source srcset="https://netology-code.github.io/mq-homeworks/adaptive-images/course-list/img/front-end-mobile.jpg" media="(max-width: 640px)">
+        <source srcset="https://netology-code.github.io/mq-homeworks/adaptive-images/course-list/img/front-end-desktop.jpg" media="(min-width: 641px)">
         <img class="course__img" src="./img/front-end-desktop.jpg" alt="Логотип для курса Frontend-разработчик">
       </picture>
       <div class="course__info">
@@ -26,6 +28,8 @@
     </article>
     <article class="course">
       <picture class="course__preview">
+        <source srcset="https://netology-code.github.io/mq-homeworks/adaptive-images/course-list/img/fullstack-designer-mobile.jpg" media="(max-width: 640px)">
+        <source srcset="https://netology-code.github.io/mq-homeworks/adaptive-images/course-list/img/fullstack-designer-desktop.jpg" media="(min-width: 641px)">
         <img class="course__img" src="./img/fullstack-designer-desktop.jpg" alt="Логотип для курса Fullstack-дизайнер">
       </picture>
       <div class="course__info">
@@ -39,6 +43,8 @@
     </article>
     <article class="course">
       <picture class="course__preview">
+        <source srcset="https://netology-code.github.io/mq-homeworks/adaptive-images/course-list/img/web-developer-mobile.jpg" media="(max-width: 640px)">
+        <source srcset="https://netology-code.github.io/mq-homeworks/adaptive-images/course-list/img/web-developer-desktop.jpg" media="(min-width: 641px)">
         <img class="course__img" src="./img/web-developer-desktop.jpg" alt="Логотип для курса Веб-разработчик">
       </picture>
       <div class="course__info">
